--- a/app/src/main/res/layout/activity_look_award.xml
+++ b/app/src/main/res/layout/activity_look_award.xml
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
-              android:orientation="vertical">
+>
 
     <RelativeLayout
         android:id="@+id/layout_title"
         android:layout_width="match_parent"
         android:layout_height="@dimen/title_height"
-        android:background="@drawable/shape_me_title_bg"
+        android:background="@color/red"
         >
 
         <ImageView
@@ -27,17 +27,51 @@
             android:layout_height="match_parent"
             android:layout_centerHorizontal="true"
             android:gravity="center"
-            android:text="七天内奖励"
+            android:text="优宝精灵"
             android:textColor="@color/color_white"
             android:textSize="@dimen/txt_size_17"/>
+        <TextView
+            android:id="@+id/tv_address"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:gravity="center"
+            android:layout_alignParentRight="true"
+            android:text="钱包地址"
+            android:textColor="@color/color_white"
+            android:layout_marginRight="15dp"
+            android:textSize="@dimen/txt_size_13"/>
 
     </RelativeLayout>
 
 
 
     <android.support.v7.widget.RecyclerView
+        android:layout_below="@+id/layout_title"
         android:id="@+id/recyclerview"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
+    <LinearLayout
+        android:id="@+id/ll_empty"
+        android:visibility="gone"
+        android:layout_width="wrap_content"
+        android:layout_below="@+id/layout_title"
+        android:orientation="vertical"
+        android:gravity="center"
+        android:layout_centerInParent="true"
+        android:layout_height="wrap_content">
+        <ImageView
+            android:layout_width="wrap_content"
+            android:src="@drawable/empty_active"
+            android:layout_height="wrap_content"/>
 
-</LinearLayout>
+        <TextView
+            android:layout_width="wrap_content"
+            style="@style/text_normal"
+            android:layout_marginTop="65dp"
+            android:text="@string/no_active"
+            android:textSize="@dimen/txt_size_16"
+            android:textColor="@color/color_txt_666"
+            android:layout_height="wrap_content"/>
+    </LinearLayout>
+
+</RelativeLayout>
