--- a/app/src/main/res/layout/item_award.xml
+++ b/app/src/main/res/layout/item_award.xml
@@ -11,22 +11,14 @@
         android:layout_height="70dp"
         android:background="@color/color_txt_white">
 
-        <ImageView
-            android:id="@+id/iv_icon"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerVertical="true"
-            android:layout_marginLeft="15dp"
-            android:src="@drawable/record"/>
+        <!--<ImageView-->
+            <!--android:id="@+id/iv_icon"-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:layout_centerVertical="true"-->
+            <!--android:layout_marginLeft="15dp"-->
+            <!--android:src="@drawable/record"/>-->
 
-        <LinearLayout
-            android:id="@+id/ll_content"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerVertical="true"
-            android:layout_marginLeft="17dp"
-            android:layout_toRightOf="@+id/iv_icon"
-            android:orientation="vertical">
 
             <TextView
                 android:id="@+id/tv_name"
@@ -34,7 +26,9 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:ellipsize="end"
-                android:textSize="@dimen/txt_size_16"
+                android:textSize="20sp"
+                android:layout_marginLeft="20dp"
+                android:layout_centerVertical="true"
                 android:textColor="@color/color_txt_red"
                 android:maxLength="20"
                 android:text="+2500"/>
@@ -45,11 +39,13 @@
                 android:layout_height="wrap_content"
                 android:ellipsize="end"
                 android:layout_marginTop="11dp"
-                android:textSize="@dimen/txt_size_13"
+                android:layout_centerVertical="true"
+                android:layout_alignParentRight="true"
+                android:layout_marginRight="20dp"
+                android:textSize="20sp"
                 android:textColor="@color/color_txt_888"
                 android:maxLength="20"
                 android:text="2018-01-02"/>
-        </LinearLayout>
 
         <View
             android:layout_width="match_parent"
