--- a/app/src/main/res/layout/view_awart_header.xml
+++ b/app/src/main/res/layout/view_awart_header.xml
@@ -1,28 +1,62 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:orientation="vertical"
-              android:layout_width="match_parent"
-              android:background="@color/color_txt_white"
-              android:layout_height="match_parent">
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                xmlns:app="http://schemas.android.com/apk/res-auto"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="#cdb394"
+                android:orientation="vertical">
+
+
     <TextView
+        android:id="@+id/tv_status"
         style="@style/text_normal"
-        android:layout_width="match_parent"
-        android:layout_marginTop="20dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="全部奖励"
-        android:textColor="@color/color_txt_666"
-        android:layout_gravity="center"
+        android:layout_alignParentRight="true"
+        android:layout_marginRight="15dp"
+        android:layout_marginTop="20dp"
+        android:drawableLeft="@drawable/online"
+        android:drawablePadding="5dp"
+        android:text="在线"
+        android:textColor="@color/color_txt_333"
         android:textSize="15sp"/>
 
-    <TextView
-        android:id="@+id/tv_total_amount"
-        style="@style/text_normal"
-        android:layout_width="match_parent"
-        android:layout_marginTop="5dp"
-        android:layout_height="wrap_content"
-        android:text="2000"
-        android:textColor="@color/red_filter_txt"
-        android:layout_gravity="center"
-        android:textSize="30sp"/>
+    <View
+        android:layout_width="220dp"
+        android:layout_height="220dp"
+        android:layout_centerInParent="true"
+        android:background="@drawable/shape_circle_bg2"/>
 
-</LinearLayout>
+    <LinearLayout
+        android:id="@+id/ll_content"
+        android:layout_width="200dp"
+        android:layout_height="200dp"
+        android:layout_centerInParent="true"
+        android:layout_marginBottom="20dp"
+        android:layout_marginTop="30dp"
+        android:background="@drawable/shape_circle_bg"
+        android:gravity="center"
+        android:orientation="vertical">
+
+        <TextView
+            style="@style/text_normal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:text="总收益"
+            android:textColor="@color/txt_color_black"
+            android:textSize="28sp"/>
+
+        <TextView
+            android:id="@+id/tv_total_amount"
+            style="@style/text_normal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginLeft="5dp"
+            android:layout_marginTop="10dp"
+            android:text="2000"
+            android:textColor="@color/red_filter_txt"
+            android:textSize="30sp"/>
+    </LinearLayout>
+</RelativeLayout>
