--- a/app/src/main/res/layout/view_awart_header.xml
+++ b/app/src/main/res/layout/view_awart_header.xml
@@ -47,13 +47,15 @@
             android:textColor="@color/txt_color_black"
             android:textSize="28sp"/>
 
-        <TextView
+        <me.grantland.widget.AutofitTextView
             android:id="@+id/tv_total_amount"
             style="@style/text_normal"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:maxLines="1"
             android:layout_gravity="center"
-            android:layout_marginLeft="5dp"
+            android:layout_marginLeft="15dp"
+            android:layout_marginRight="15dp"
             android:layout_marginTop="10dp"
             android:text="2000"
             android:textColor="@color/red_filter_txt"
